--- a/.gitignore
+++ b/.gitignore
@@ -178,9 +178,9 @@ cython_debug/
 /data
 /logs
 *.safetensors
-/results_worker_0
-/results_worker_1
-/results_worker_2
+results_worker_0
+results_worker_1
+results_worker_2
 *.pkl
 .DS_Store
 .server_port
